fix: change slider adaptation on tablet version

--- a/shelter/style.css
+++ b/shelter/style.css
@@ -588,7 +588,6 @@ footer a {
 html.stop {
     overflow-y: hidden;
 }
-
 /*--HOOVER AND ACTIVE--*/
 
 @media (any-hover: hover) {
@@ -708,7 +707,7 @@ html.stop {
         max-width: 600px;
         justify-content: start;
         margin-bottom: 20px;
-        gap: 9%
+        gap: 9%;
     }
 }
 
